# youtube-projects

./: README.md
invoice-tracker/: .env.example  README.md  package-lock.json  package.json
invoice-tracker/src/: proxy.ts
multi-agent-law-rag/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
multi-agent-law-rag/.claude/: settings.local.json
multi-agent-law-rag/documents/: .gitignore
multi-agent-law-rag/src/: .gitignore  config.py  main.py
multi-agent-law-rag/src/agents/: base_agent.py  graph.py  ingestion_agent.py  rag_agent.py  state.py  supervisor_agent.py  temporal_agent.py
multi-agent-law-rag/src/utils/: pdf_extractor.py  text_cleaner.py  validators.py
multi-agent-law-rag/src/vectorstore/: document_processor.py  embeddings.py  vector_store.py
n8n-simple-workflows/0. three useful workflows/: Categorize and Label Incoming Gmail Emails Automatically with GPT-4o mini.json  complex_wordpress_rag.json  rag_google_drive.json
n8n-simple-workflows/1. Internal requests workflow/: Internal_Requests_Workflow_Documentation.md  internal-requests-workflow.json
n8n-simple-workflows/2. Google calendar summarizer/: Google_Calendar_Summarizer_Documentation.md  calendar_agent_with_get_events.json
n8n-simple-workflows/3. WooCommerce/: AI-Driven WooCommerce Product Importer from Google Sheet with Yoast SEO meta.json  Woocomerse high value customers.json
n8n-simple-workflows/4. SEO stuff - Google Search API/: competitor analyzer seo.json  dentists in thessaloniki leads finder.json
n8n-simple-workflows/5. Google Calendar/: 5. Schedule Form - Google calendar.json  5. Telegram leads bot - Google calendar.json  5. Weekly Summarizer - Google calendar.json
n8n-simple-workflows/6. Travel planner/: Travel Planner - Done.json
n8n-simple-workflows/7. Google drive pdfs to vector store (sync)/: Google Drive → Supabase Vector Sync (UNIVERSAL WORKFLOW).json
n8n-simple-workflows/8. Invoice processor/: Invoice Processing.json
n8n-simple-workflows/9. Calories analyzer webhook/: Calorie Analyzer - Complete.json
n8n-simple-workflows/tutoral - master these 17 nodes/: Master 80% of n8n with 17 nodes.json
n8n-wordpress-chatbot/: wordpress_chatbot.json
or-tools/: PROBLEM-DESCRIPTION.md  data.json  env.yml  main.py  schedule_30_days.csv  schedule_365_days.csv  schedule_7_days.csv  scheduling_solver.py  workload_distribution_30_days.csv  workload_distribution_365_days.csv  workload_distribution_7_days.csv
(+20 files in other folders)
